// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viser riktig form for å endre norsk kontonummer 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c2 {
  font-size: 11px;
}

.c1 {
  margin-top: 3px;
}

.c1 .typo-etikett-liten {
  line-height: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 > * {
  margin-left: 1em;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Kontonummer
    </h2>
    <div
      className="inputPanelGruppe"
    >
      <fieldset
        className="skjema__fieldset"
      >
        <legend
          className="skjema__legend"
        >
          
        </legend>
        <label
          className="inputPanel radioPanel inputPanel--checked"
          htmlFor="Kontonummer i Norge"
        >
          <input
            aria-checked={true}
            checked={true}
            className="inputPanel__field"
            disabled={undefined}
            id="Kontonummer i Norge"
            name="Velg norsk eller utenlandsk konto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
          />
          <span
            className="inputPanel__label"
          >
            Kontonummer i Norge
          </span>
        </label>
        <label
          className="inputPanel radioPanel"
          htmlFor="Kontonummer i utlandet"
        >
          <input
            aria-checked={false}
            checked={false}
            className="inputPanel__field"
            disabled={undefined}
            id="Kontonummer i utlandet"
            name="Velg norsk eller utenlandsk konto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
          />
          <span
            className="inputPanel__label"
          >
            Kontonummer i utlandet
          </span>
        </label>
      </fieldset>
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="c1"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c2"
        >
          Endret 12.12.2005 Daniel
        </span>
      </p>
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Kontonummer"
      >
        Kontonummer
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="Kontonummer"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="1234 56 78911"
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="c3"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
        disabled={true}
        onClick={[Function]}
        type="submit"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
        disabled={true}
        type="submit"
      >
        Endre kontonummer
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`Viser riktig form for å endre utenlandsk kontonummer 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c2 {
  font-size: 11px;
}

.c1 {
  margin-top: 3px;
}

.c1 .typo-etikett-liten {
  line-height: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 > * {
  margin-left: 1em;
}

<form
  onSubmit={[Function]}
>
  <fieldset
    className="c0"
    disabled={false}
  >
    <h2
      className="typo-undertittel"
    >
      Kontonummer
    </h2>
    <div
      className="inputPanelGruppe"
    >
      <fieldset
        className="skjema__fieldset"
      >
        <legend
          className="skjema__legend"
        >
          
        </legend>
        <label
          className="inputPanel radioPanel"
          htmlFor="Kontonummer i Norge"
        >
          <input
            aria-checked={false}
            checked={false}
            className="inputPanel__field"
            disabled={undefined}
            id="Kontonummer i Norge"
            name="Velg norsk eller utenlandsk konto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
          />
          <span
            className="inputPanel__label"
          >
            Kontonummer i Norge
          </span>
        </label>
        <label
          className="inputPanel radioPanel inputPanel--checked"
          htmlFor="Kontonummer i utlandet"
        >
          <input
            aria-checked={true}
            checked={true}
            className="inputPanel__field"
            disabled={undefined}
            id="Kontonummer i utlandet"
            name="Velg norsk eller utenlandsk konto"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
          />
          <span
            className="inputPanel__label"
          >
            Kontonummer i utlandet
          </span>
        </label>
      </fieldset>
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="c1"
    >
      <p
        className="typo-etikett-liten"
      >
        <span
          className="c2"
        >
          Endret 12.12.2005 Daniel
        </span>
      </p>
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Velg land"
      >
        Velg land
      </label>
      <div
        className="selectContainer input--fullbredde"
      >
        <select
          className="skjemaelement__input"
          disabled={false}
          id="Velg land"
          onChange={[Function]}
          value="NRN"
        >
          <option
            value="Velg land"
          >
            Velg Land
          </option>
          <option
            value="BMU"
          >
            Bermuda
             (
            BMU
            )
          </option>
          <option
            value="COL"
          >
            Colombia
             (
            COL
            )
          </option>
          <option
            value="LVS"
          >
            Langtvekkistan
             (
            LVS
            )
          </option>
          <option
            value="MRS"
          >
            Mars
             (
            MRS
            )
          </option>
          <option
            value="NRN"
          >
            Narnia
             (
            NRN
            )
          </option>
          <option
            value="NOR"
          >
            Norge
             (
            NOR
            )
          </option>
          <option
            value="ESP"
          >
            Spania
             (
            ESP
            )
          </option>
          <option
            value="USA"
          >
            Usa
             (
            USA
            )
          </option>
        </select>
      </div>
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Bankens navn"
      >
        Bankens navn
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="Bankens navn"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="Bien sparebank"
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Bankens adresse linje 1"
      >
        Bankens adresse
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="Bankens adresse linje 1"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value=""
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Bankens adresse linje 2"
      >
        
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="Bankens adresse linje 2"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value=""
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Bankens adresse linje 3"
      >
        
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="Bankens adresse linje 3"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value=""
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Kontonummer eller IBAN"
      >
        Kontonummer eller IBAN
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="Kontonummer eller IBAN"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="12345678911"
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="BC/SWIFT-kode"
      >
        BC/SWIFT-kode
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="BC/SWIFT-kode"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value=""
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="BankKode"
      >
        Bankkode
      </label>
      <input
        className="skjemaelement__input input--fullbredde"
        id="BankKode"
        name={undefined}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value=""
      />
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="skjemaelement"
    >
      <label
        className="skjemaelement__label"
        htmlFor="Velg valuta"
      >
        Velg valuta
      </label>
      <div
        className="selectContainer input--fullbredde"
      >
        <select
          className="skjemaelement__input"
          disabled={false}
          id="Velg valuta"
          onChange={[Function]}
          value="SPD"
        >
          <option
            value="Velg valuta"
          >
            Velg valuta
          </option>
          <option
            value="USD"
          >
            Amerikanske Dollar
             (
            USD
            )
          </option>
          <option
            value="GUL"
          >
            Gullmynter, Kong Salomons Rike
             (
            GUL
            )
          </option>
          <option
            value="NZD"
          >
            New Zealand Dollar
             (
            NZD
            )
          </option>
          <option
            value="NOK"
          >
            Norske Kroner
             (
            NOK
            )
          </option>
          <option
            value="SPD"
          >
            Spesidaler
             (
            SPD
            )
          </option>
        </select>
      </div>
      <div
        aria-live="assertive"
        role="alert"
      />
    </div>
    <div
      className="c3"
    >
      <button
        className="knapp knapp--standard knapp--disabled"
        disabled={true}
        onClick={[Function]}
        type="submit"
      >
        Avbryt
      </button>
      <button
        className="knapp knapp--hoved knapp--disabled"
        disabled={true}
        type="submit"
      >
        Endre kontonummer
      </button>
    </div>
  </fieldset>
</form>
`;
